force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <label>Observation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>