force-app/main/default/objects/Observation__c/fields/Behavior_Lead_Initials__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Lead_Initials__c</fullName>
    <label>Behavior Lead Initials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>