force-app/main/default/objects/Observation__c/fields/Behavior_Response__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Response__c</fullName>
    <label>Behavior Response</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>