force-app/main/default/objects/Observation__c/fields/Behavior_Staff_Initials__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Staff_Initials__c</fullName>
    <label>Behavior Staff Initials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>