force-app/main/default/objects/Observation__c/fields/Daily_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Enrichment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Enrichment</label>
    <referenceTo>Daily_Enrichment__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>