force-app/main/default/objects/Observation__c/fields/Observation_Date__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Observation Date</label>
    <type>Date</type>
</CustomField>