force-app/main/default/objects/Observation__c/fields/Observation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Observation_Notes__c</fullName>
    <label>Observation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>