force-app/main/default/objects/Observation__c/fields/Observation_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Observation_Reported_By__c</fullName>
    <label>Observation Reported By</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>