force-app/main/default/objects/Observation__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <label>Observation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Happy Tale</fullName>
            </value>
            <value>
                <fullName>Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>