force-app/main/default/objects/Observation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Observation_Reported_By__c</columns>
    <columns>Observation_Type__c</columns>
    <columns>Observation_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>